# SensorFusion

./: .gitignore  README.md
doc/Lecture10_Homework/: README.md
doc/Lecture10_Homework/traj01/: ground_truth.txt  laser_odom.txt  optimized.txt
doc/Lecture1_Homework/: README.md
doc/Lecture2_Homework/: README.md
doc/Lecture3_Homework/: README.md
doc/Lecture4_Homework/: README.md
doc/Lecture5_Homework/: README.md
doc/Lecture6_Homework/: README.md
doc/Lecture6_Homework/data/: ground_truth_file.txt
doc/Lecture6_Homework/data/step1/: euler_estimation.txt  mid_point_estimation.txt
doc/Lecture6_Homework/data/step2/: euler_estimation.txt  ground_truth_file.txt  mid_point_estimation.txt
doc/Lecture7_Homework/: Homework.md  README.md
doc/Lecture8_Homework/: Homework.md  README.md
doc/Lecture8_Homework/01/: fused.txt  ground_truth.txt  laser.txt
doc/Lecture8_Homework/02/: fused.txt  ground_truth.txt  laser.txt  param.txt
doc/Lecture9_Homework/: README.md
doc/Lecture9_Homework/IMUPre/: ground_truth.txt  laser_odom.txt  optimized.txt
doc/Lecture9_Homework/NoIMU/: ground_truth.txt  laser_odom.txt  optimized.txt
src/08-graph-optimization/: README.md
src/09-sliding-window/: README.md
src/final_project/src/novatel_span_driver/: .gitignore  README.md
src/final_project/src/novatel_span_driver/novatel_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/final_project/src/novatel_span_driver/novatel_msgs/msg/: Ack.msg  BESTPOS.msg  CORRIMUDATA.msg  CommonFooter.msg  CommonHeader.msg  INSCOV.msg  INSPVAX.msg
src/final_project/src/novatel_span_driver/novatel_span_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
src/final_project/src/novatel_span_driver/novatel_span_driver/launch/: example.launch  example_for_usb.launch
src/final_project/src/novatel_span_driver/novatel_span_driver/scripts/: driver
src/final_project/src/novatel_span_driver/novatel_span_driver/src/novatel_span_driver/: bridge.py  data.py  diagnostics.py  handlers.py  mapping.py  monitor.py  port.py  publisher.py  translator.py  wheel_velocity.py
src/final_project/src/novatel_span_driver/novatel_span_driver/test/: propak6-basic-fix.test  propak6-ins-ppp.test
src/gnss_ins_sim/config/: recorder_allan_variance_analysis.yaml  recorder_deterministic_error_calib.yaml
src/gnss_ins_sim/src/: recorder_node_allan_variance_analysis.py
src/gnss_ins_sim/src/allan_variance_analysis/: data.bag
src/imu_integration/rviz/: imu_integration.rviz
src/imu_integration/src/estimator/: activity.cpp
src/imu_tk/: package.xml
src/imu_tk/include/imu_tk/: calibration.h
src/lidar_localization/: .gitignore  CMakeLists.txt
src/lidar_localization/cmake/: geographic.cmake  glog.cmake  protobuf.cmake
src/lidar_localization/config/filtering/: kitti_filtering.yaml
src/lidar_localization/config/front_end/: config.yaml
src/lidar_localization/config/matching/: matching.yaml
src/lidar_localization/config/scan_context/: key_frames.pb.cpp  ring_keys.pb.cpp  ring_keys.pb.h  scan_contexts.pb.cpp  scan_contexts.pb.h
src/lidar_localization/launch/: front_end.launch
src/lidar_localization/rviz/: filtering.rviz  front_end.rviz
src/lidar_localization/slam_data/: .gitignore
src/lidar_localization/src/: aloam_laser_odometry_node.cpp  aloam_mapping_node.cpp  aloam_scan_registration_node.cpp  evaluation_node.cpp  front_end_node.cpp
(+65 files in other folders)
