<?xml version="1.0"?>
<package>
  <name>novatel_msgs</name>
  <version>1.1.0</version>
  <description>ROS messages which represent raw Novatel SPAN data.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <maintainer email="icolwell@gsd.uwaterloo.ca">Ian Colwell</maintainer>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>

  <author email="support@novatel.com">NovAtel Support</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
